kubernetes/absn23/05-microblog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microblog
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
        - name: microblog
          image: abedsandeed/microblog:prod
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
          ports:
            - containerPort: 5000
