kubernetes/absn23/06-microblog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: microblog
spec:
  selector:
    app: microblog
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
